--- a/src/Manfred/project.json
+++ b/src/Manfred/project.json
@@ -20,7 +20,7 @@
     "Microsoft.Extensions.Logging.Console": "1.0.0",
     "Microsoft.Extensions.Logging": "1.0.0",
     "Microsoft.Extensions.Options.ConfigurationExtensions": "1.0.0",
-    "AWSSDK.DynamoDBv2": "3.1.5.2"
+    "AWSSDK.DynamoDBv2": "3.2.5-beta"
   },
   "frameworks": {
     "netcoreapp1.0": {
