--- a/src/Manfred/appsettings.json
+++ b/src/Manfred/appsettings.json
@@ -8,7 +8,8 @@
     }
   },
   "Manfred": {
-    "ApiKey": "hello",
-    "Jid": "userid@chat.hipchat.com"
+    "ApiKey": "my hipchat api key",
+    "Jid": "userid@chat.hipchat.com",
+    "Url": "https://insert.my.domain.name.for.webhooks.example.com"
   }
 }
