add token renew and clear methods

--- a/src/Manfred/project.json
+++ b/src/Manfred/project.json
@@ -20,7 +20,8 @@
     "Microsoft.Extensions.Logging.Console": "1.0.0",
     "Microsoft.Extensions.Logging": "1.0.0",
     "Microsoft.Extensions.Options.ConfigurationExtensions": "1.0.0",
-    "AWSSDK.DynamoDBv2": "3.2.5-beta"
+    "AWSSDK.DynamoDBv2": "3.2.5-beta",
+    "IdentityModel": "2.0.0-beta5"
   },
   "frameworks": {
     "netcoreapp1.0": {
