use global secondary index instead of table for querying installations by oauthid

--- a/src/Manfred/appsettings.json
+++ b/src/Manfred/appsettings.json
@@ -8,6 +8,7 @@
     }
   },
   "Manfred": {
+    "TableNamePrefix": "Manfred_",
     "ApiKey": "my hipchat api key",
     "Jid": "userid@chat.hipchat.com",
     "Url": "https://insert.my.domain.name.for.webhooks.example.com"
