move hipchat meta details to config file

--- a/src/Manfred/appsettings.json
+++ b/src/Manfred/appsettings.json
@@ -11,6 +11,11 @@
     "TableNamePrefix": "Manfred_",
     "ApiKey": "my hipchat api key",
     "Jid": "userid@chat.hipchat.com",
-    "Url": "https://insert.my.domain.name.for.webhooks.example.com"
+    "Url": "https://insert.my.domain.name.for.webhooks.example.com",
+    "HipChat": {
+      "Key": "uk.org.octomonkey.cmsd2.manfred",
+      "Name": "Manfred",
+      "Description": "Manfred chat bot"
+    }
   }
 }
