add kinesis sink for room events

--- a/src/Manfred/appsettings.json
+++ b/src/Manfred/appsettings.json
@@ -12,6 +12,7 @@
     "ApiKey": "my hipchat api key",
     "Jid": "userid@chat.hipchat.com",
     "Url": "https://insert.my.domain.name.for.webhooks.example.com",
+    "KinesisStreamName": "insert-my-kinesis-stream-name-here",
     "HipChat": {
       "Key": "uk.org.octomonkey.cmsd2.manfred",
       "Name": "Manfred",
