validate hs256 jwt on room events

--- a/src/Manfred/project.json
+++ b/src/Manfred/project.json
@@ -8,6 +8,8 @@
       "type": "platform",
       "version": "1.0.0"
     },
+    "Microsoft.IdentityModel.Tokens": "5.0.0",
+    "System.IdentityModel.Tokens.Jwt": "5.0.0",
     "HipChat.Net": "1.0.0",
     "Microsoft.Extensions.Configuration": "1.0.0",
     "Microsoft.Extensions.Configuration.Json": "1.0.0",
